fix: make text smaller for additional info
Otherwise, if you walk too much you won't be able to see the steps properly : P

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -41,5 +41,5 @@ text.clock {
   text-length: 10;
   fill: fb-pink;
   font-family: Colfax-Regular;
-  font-size: 60;
+  font-size: 40;
 }
